# nodecleaner

./: .gitignore  README.md  nodecleaner.py  pyproject.toml
src/nodecleaner/: __init__.py  __main__.py  core.py
tests/: test_core.py
