[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nodecleaner"
version = "1.0.0"
description = "Clean junk files from Node.js / React Native / Expo development on macOS."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "rebazomar" }]
keywords = ["node", "react-native", "expo", "cache", "cleanup", "macos", "cli"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/rebazomar121/nodecleaner"
Issues = "https://github.com/rebazomar121/nodecleaner/issues"

[project.scripts]
nodecleaner = "nodecleaner.core:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nodecleaner"]

[tool.hatch.version]
path = "src/nodecleaner/core.py"
pattern = 'VERSION = "(?P<version>[^"]+)"'
